--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="form-group" style="width: 200px">
-    <label for="exampleSelect1" class="form-label mt-4">Category</label>
+<div class="form-group" style="width: 200px; margin: 0 auto; font-family: Consolas">
+    <label for="exampleSelect1" class="form-label mt-4"  style="color: black; display: flex; justify-content: center; font-size: 25px; margin-left: 25px; font-family: 'Bookman Old Style'">Category</label>
     <select class="form-select" id="exampleSelect1">
         <option>Travel</option>
         <option>Animals</option>
         <option>Computer</option>
         <option>Food</option>
+        
     </select>
 </div>
 <div class="bigImage">
